trying to solve native browser search inconsistency by making dropdown invisible, instead of just changing the position

--- a/chosen/chosen.css
+++ b/chosen/chosen.css
@@ -128,6 +128,7 @@
 .chzn-container-single-nosearch .chzn-search input {
   position: absolute;
   left: -9000px;
+  display: none;
 }
 
 /* @group Multi Chosen */
